Updated files for May 2014 newsletter.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -27,14 +27,13 @@ content for the Chronicle.
 \vspace{12pt}
 
 Jim Riddoch came to the rescue with a story about a
-successful\/disastrous flight test.  We like these kinds of
-stories--to small and personal to turn up in the history books, but
+successful/disastrous flight test.  We like these kinds of
+stories\textemdash too small and personal to turn up in the history books, but
 they do pull you into real human experiences. There will be more of these. 
 
 %We also have another hair-raising flying story from Tim Timmins. A
 %series of previous Timmins stories can be found through the same
-%website, starting with the December 2010 issue.
-
+%website, starting with the December 2010 issue
 \vspace{12pt}
 
 Your editor became a writer too, and the writer submitted a tragic
