--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,82 +4,119 @@
 
 % Head
 
-\title{My Days at the Home of the Merlin Engine}
-\subtitle{Part 4}
-\author{Richard Lodge}
+\title{RAF Lightning with Over-Wing Tanks}
+%\subtitle{Part 4}
+\author{Jim Riddoch}
 
 \maketitle
 
-One of the most mysterious departments at Rolls-Royce was the
-Technical Publications Department. Word processing was unheard of in
-the 1960s and every time an engine modification was made, it resulted
-in much work documenting even a small change and distributing the
-updated documentation to all engine users around the world. I never
-spent any time working with the people in this department even though
-there was a complete building devoted to the work. Compared with the
-resources allocated to engine development, the technical publication
-side of the business was very small and it always remained a mystery
-to me.
+During the early 60's Britain's Defence Department decided that the
+new fleet of Lightning aircraft should have the capability to extend
+its current sortie of 22 minutes to permit ferry to the Middle
+East. In-flight refuelling had not worked successfully due to the
+offset probe positioned under one wing. Accordingly BAC (British
+Aircraft Corporation,Warton Division) was awarded a contract to
+develop extended wing tanks that could be jettisoned if necessary.
 
-Since retiring from my career as an accountant in Canada, I have
-become active on the actual restoration work of the North
-Star. Understandably, I have a special interest in working on the
-Merlin engines. Nobody now working on the restoration has ever worked
-on a Merlin when it was in service. It is therefore necessary at all
-times to refer to the various publications and manuals we have managed
-to accumulate for the North Star.
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{jim_riddoch.eps}
+   %caption of the figure 
+   \caption*{\small \em Jim Riddoch.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:jim_riddoch.eps}
+\end{figure}
 
-It is only now, actually working on the engine and referring
-frequently to the exploded diagrams that I realize how complicated the
-work of the Technical Publications Department must have been. The men
-and women who worked there were largely unsung heroes in that it was
-very tedious and unglamorous work which was of great importance for
-the safe and trouble free running of engines in service. I can
-remember that I would hear from time to time of the difficulties of
-ensuring that publication updates were actually delivered to many
-remote places in the world and the considerable logistical
-complications of ensuring that the packages arrived safely and
-furthermore that the updates were actually inserted in the relevant
-manuals, particularly as many of the engine users did not speak
-English. I cannot remember now if any of the documentation was
-translated into other languages although I have a recollection that we
-employed people who could translate into French and Spanish.
+%% \begin{footnotesize}
+%% [Image: {\normalfont\color{blue}\href{http://www.airteamimages.com/english-electric-lightning_XP693_united-kingdom---royal-air-force_43865.html}{English
+%%     Electric Lightning with over-wing tanks}}]
+%% \end{footnotesize}
 
-After a couple of years I was given a new job in the Long Range
-Planning Department. I was one of three accountants working in this
-office under a very senior accountant. Here we looked at the costings
-of the development work, the projected sales and production costs on
-new engine designs. This was the time when the Spey was going into
-service and the the company had signed a fixed price contract for the
-RB211 engines for the new Lockheed 1011. This was a major project,
-championed by David Huddie the Chief Engineer. Computer spreadsheets
-did not exist at that time - pencil and columnar paper were the order
-of the day, together with efficient erasers. Long range forecasts of
-25 years required many yearly columns and each time we produced
-figures that the engineers did not like, we were told to rework the
-numbers until we produced an acceptable answer. We were not limited in
-the number of erasers we could use. The usual way of cutting costs was
-to reduce the forecast development and testing time. Of course this
-did not work in real life.
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.5]{Eng3Intercooler.eps}
+%   %caption of the figure 
+%   \caption*{\small \em Garry installing the intercooler on engine 3.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:Eng3Intercooler}
+%\end{figure}
 
-We were often dealing with the directors of R-R who lived on the top
-floor of the Nightingale Road offices. Many of them were engineers and
-they had little time for young bean counters. It was still a time of
-optimism for the company. The huge contract for the Lockheed engines
-had been signed and the company was still enjoying its reputation as
-the company whose Merlin engines had helped to save Britain in the
-Second World War. This was in 1965/6 and it was several years before
-our projections of doom resulted in the bankruptcy of the
-company. Fortunately I left the company in 1966 and was not involved
-in what must have been a horrible process as a symbol of British
-engineering excellence slowly went to the wall.
+Unfortunately the Lightning with its high speed wings had limited
+capacity for wing tip tanks and already with armament pylons under
+wing could not accommodate under-wing tanks, so the decision was made
+to develop over-wing tanks secured with pylons through the wing
+structure. These tanks would each carry 250 imperial gallons to
+provide initial fuel transfer after take off and be jettisoned once
+empty.
 
-After the chaos caused by the demise of Rolls-Royce Limited, the
-British government formed a new nationalized company to take over the
-remains of the old one. This has been very much a success story and
-the privatized Rolls-Royce is now a highly profitable and innovative
-company. I look back on my days at R-R with nostalgia but I now
-realize that much of the time we were all living in a fool's paradise.
+I was designated to be the Development Engineer to carry out the
+development and testing of this design about 1963/64. The design
+concept of these tanks had to include a balanced transfer system to
+maintain aircraft C of G during take off and climb out, this meant 5
+small interior sealed compartments pressurized with air to permit
+sequential transfer. Also an emergency fuel jettison system prior to
+tank wing ejection. As you can readily appreciate this was a very
+challenging design and even more demanding for testing and
+certification.
+
+Once the initial test tanks were built they were dispatched to
+Mechanical Test Department at Warton Lancashire, where I worked.
+Needless to say the RAF were keen to witness the development and
+testing of these over-wing tanks. A Wing Commander headed a team of
+three Senior Techs to keep track of our progress. Fortunately the
+Techs were very helpful and hands-on in working with us.  You can
+imagine the challenges we faced checking the transfer sequences at
+varying attitudes. Many a Saturday morning was spent testing and
+verifying these change in attitudes and minimizing fuel transfer loss,
+the end result being approximately 225 gallons of fuel transferred
+from each wing tank depending on aircraft attitude and roll.
+
+The next major design requirement was the emergency fuel jettison;
+this was to be accomplished by air pressure from centre compartment to
+rear of the tank where a jettisonable fairing was fastened by
+explosive bolts and attached by a cord to a bung on the end of the
+fuel ejection pipe. Talk about Heath Robinson device, this takes the
+biscuit! Suffice to report that on the ground test of this
+ill-conceived system with Chief Designer and my Chief Engineer and
+many observers with cameras, the rear fairing departed into oblivion
+and the cord broke, due to a miserable sub standard cord substituted
+instead of a parachute cord as specified. The bung remained firmly
+attached to the jettison pipe. It was about this time I first thought
+of emigrating to Canada, in fact anywhere outside Britain!
+
+Needless to say the cord was replaced, the ejection system proved
+satisfactory and the tanks were certified for flight test. This was to
+be done with one tank attached to the top of one wing and painted with
+black and white checkered squares for easy recognition when ejected. I
+always remember the Test Pilot, Peter Knight inquiring about the
+likely occurrence of the tank separating from the wing and hitting the
+tail of the aircraft. I assured him that ground testing of a model in
+the wind tunnel had worked, in fact the small tank had disappeared
+through the end of the tunnel and took some time to recover in the
+neighbouring field.
+
+To replicate the fuel system jettison some bright spark proposed
+filling the tank with coloured water for better visibility. The
+aircraft took off, circled Warton Aerodrome and made a low pass to
+jettison the coloured water over the attentive crowd including chiefs
+and dignitaries. Fortunately, the jettison of the tail fairing and
+bung release worked perfectly and the water emerged in a colourful
+shower.  
+
+The weather gods not being with us, the wind blew all the water over
+the spectators covering their expensive clothing with a colourful dye!
+Finally, the tank was ejected safely over Morecombe Bay and eventually
+recovered and returned to BAC Warton amidst embarrassed and colourful
+faces. As one might expect, this completely successful test left the
+Wing Commander disgusted with the entire experiment. He cancelled the
+project.
+
+Any thoughts I had of joining the RAF completely disintegrated. Once
+again, immigration to Canada looked much more inviting.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
