--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -4,28 +4,74 @@
 
 % Head
 
-\title{The Whispering Giant}
-\author{Dave Lambeth}
+\title{Elise D\'{e}roche, Aviatrice}
+\author{Bruce Grant, Fl\^{a}neur}
 
 \maketitle
 
-Twinkle, twinkle, old North Star,\\
-With wrinkled skin and creaky
-spar,\\
-For years you’ve always been on
-sked,\\
-As many of our force you’ve sped\\
-to distant lands beyond the skies,\\
-you’ve never failed to see the rise\\
-of distant suns or moonrise glare.\\
-You’ve carried us with tender care\\
--back you came to take us home,\\
-from old Japan or France or Rome\\
-from England, Goose, and Kef,\\
-We cannot hear you.\\
-(‘cause we’re deaf)\\
+Wandering about in Paris recently I came upon a plaque, bolted to a
+wall at 61 Rue de la Verrerie in the 4th. Wandering about is my
+favourite activity in Paris. Let others wait in the long lines at the
+tourist sites (I've done all that) or plunder the shops in Faubourg
+Saint Honor\'{e} (I'll never do that); I wander about.
 
+So, who was this Elise D\'{e}roche a.k.a. Baronne Elisa Raymonde de
+Laroche, Aviatrice?  I took the picture and resolved to look her up at
+home.
 
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{aviatrice.eps}
+   %caption of the figure 
+   %\caption*{\small \em Garry installing the intercooler on engine 3.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:aviatrice}
+\end{figure}
+
+Here's a brief outline of the story I encourage readers to look
+for her online.  Many sites relate her story though with some
+contradictions among the various accounts.
+
+Born into the working class family of a plumber, Elise D\'{e}roche
+became an artist and actress, took the stage name of Baronne Elisa
+Raymonde de Laroche. She also became the "amie intime" of the artist
+and aviator L\'{e}on Delagrange who introduced her to his friend Charles
+Voisin, a builder of airplanes.
+
+There is an interesting chronology that indicates a life full of
+tragedy, a life that she lived with intensity and audacity: L\'{e}on
+Delagrange died, January 1910 when the wing came off his Bl\'{e}riot
+airplane. Elise recovered quickly from her grief and appealed to her
+new ami intime Charles Voisin to teach her to fly. She won her pilot's
+licence in March 1910. A crash in July 1910 put her in hospital with
+18 fractures. She recovered and returned to flying.
+
+In a car crash in September 1912, Charles Voisin was killed but
+Elise survived. She maried the pilot Jacques Vial in February of
+1915, her first marriage. During the war, she was not allowed to
+fly but served in the military as a driver. In 1918 her only
+child Andr\'{e} (with L\'{e}on Delagrange) died aged 15 of the Spanish
+Flu. July 1919, she was killed in a plane crash while training to
+become a test pilot. Audace? Mais oui!
+
+La Baronne Elisa Raymonde de Laroche is buried in Cimeti\`{e}re
+P\`{e}re Lachaise in Paris.
+
+\vspace{10mm}
+
+\begin{centering}
+My candle burns at both ends;\\
+It will not last the night;\\
+But ah, my foes, and oh, my friends --\\
+It gives a lovely light!\\
+\vspace{2mm}
+\begin{footnotesize}
+Edna St. Vincent Millay
+\end{footnotesize}
+
+\end{centering}
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
