--- a/pnsac/newsletter/article_Feature3.tex
+++ b/pnsac/newsletter/article_Feature3.tex
@@ -4,47 +4,40 @@
 
 % Head
 
-\title{Troop Seats and Extras}
-\author{Nelson Smith}
+\title{The Whispering Giant}
+\author{Dave Lambeth}
 
 \maketitle
 
-\section{Troop Seats}
-\label{troopseats}
-
-Seat back assemblies are completed for the troop seats. Thirty eight
-units were produced. The assembling of the backs to the platforms to
-produce triple and quad seats will be the next step. This will be done
-over the winter.
+\begin{centering}
+Twinkle, twinkle, old North Star,\\
+With wrinkled skin and creaky
+spar,\\
+For years you've always been on
+sked,\\
+As many of our force you've sped\\
+to distant lands beyond the skies,\\
+you've never failed to see the rise\\
+of distant suns or moonrise glare.\\
+You've carried us with tender care\\
+-- back you came to take us home,\\
+from old Japan or France or Rome\\
+from England, Goose, and Kef.\\
+We cannot hear you.\\
+('cause we're deaf)\\
+\end{centering}
 
 \begin{figure}[htbp]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{troopseats.eps}
+   \includegraphics[scale=0.5]{jim_jung_2.eps}
    %caption of the figure 
-   \caption*{\small \em New troop seats.}
+   \caption*{\small \em A Whispering Giant (North Star 17515) at
+     Resolute Bay NWT in about 1963, taken by Radio Operator Jim Jung.}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:troopseats}
+   \label{fig:jim_jung}
 \end{figure}
-
-The prototype is progressing well. As previously stated, measurements
-are a rarity with these projects and sometimes it takes longer to
-figure out a plan than to do the job. A guesstimate for completion:
-early December.
-
-
-\section{Other Projects}
-\label{otherporjects}
-
-Proctective covers for the probes which protrude under the belly of
-the North Star were made and installed. The foam pads previously
-installed had done their time.
-
-The First Officer's protective seat covers have been manufactured and
-installed. This addition was required to shield the seat covers from
-UV rays, dust and stains. Similar covers will be made for the
-Captain's chair during the winter months.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
