--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -10,20 +10,23 @@
 \end{multicols}
 
 \begin{tabbing}
-%May 30, 2013     \hspace{20mm}\= Board of Directors' Meeting\\
-% {\normalfont\color{red}June 8, 2013}     \>
-% {\normalfont\color{red}Annual General Meeting}\\
-%June 8, 2013      \> Board of Directors' Meeting (post AGM)\\
-%June 27, 2013     \> Board of Directors' Meeting (first meeting of new Board)\\
-March 20, 2014    \hspace{20mm}\= Board of Directors' Meeting (to be
-confirmed)\\
-{\normalfont\color{red}April 12, 2014}    \>{\normalfont\color{red}Members' Quarterly Meeting -- Vintage Wings of Canada}
+June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
+{\normalfont\color{red}June 14, 2014}     \>
+{\normalfont\color{red}Members' Quarterly Meeting}\\
+September 18, 2014 (proposed)      \> Board of Directors' Meeting\\ 
+September 27, 2014 (proposed)     \> Annual General Meeting\\
+September 27, 2014 (proposed)  \> Board of Directors' Meeting (post AGM)\\
+November 27, 2014 (proposed)   \> Board of Directors' Meeting -- new
+Board\\
+December 6, 2014 (proposed)  \> Members' Quarterly Meeting\\
+March 19, 2015 (proposed) \> Board of Directors' Meeting\\
+March 28, 2015 (proposed) \> Members' Quarterly Meeting
 
 \end{tabbing}
 
-\noindent \textbf{Note}: The next Quarterly meeting will be held in the boardroom of
-{\normalfont\color{blue}\texttt{\href{https://http://www.vintagewings.ca/}{Vintage
-      Wings of Canada }}} at 10:00 AM on April 12, 2014.  A hangar tour will follow the meeting. 
+%\noindent \textbf{Note}: The next Quarterly meeting will be held in the boardroom of
+%{\normalfont\color{blue}\texttt{\href{https://http://www.vintagewings.ca/}{Vintage
+%      Wings of Canada }}} at 10:00 AM on April 12, 2014.  A hangar tour will follow the meeting. 
 
 \begin{multicols}{2}
 
