--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,68 +10,66 @@
 
 \maketitle
 
-As we come to the end of 2013, I think of it as an interesting year
-with some disappointments and important successes. I believe we end
-the year in a very positive way and I look forward to 2014 with
-enthusiasm and renewed optimism.
+Since my last Notes from the President in December 2013, restoration
+work on the North Star has mostly been suspended. The Museum has
+needed extra working space so that exhibits could be made ready for
+the commemoration this year of the centenary of the start of the First
+World War and the 70th anniversary on June 6 of D-Day in the Second
+World War. These preparations have resulted in our normal working
+areas being unavailable for North Star restoration work.
 
-First let me get the disappointments out of the way. 2013 was our 10th
-anniversary year. We had hoped to make the event an opportunity to
-show off our achievements during the first 10 years and create
-additional interest around the plane. Unfortunately, due to events
-beyond our control, it was not possible to stage a significant event
-marking the anniversary. We therefore did our usual opening of the
-plane to the public on Canada Day and marked the anniversary with our
-PNSAC photographer taking photographs of members as they visited the
-restored cockpit.
+\begin{figure}[htbp]
+  \vspace{2em}
+  \centering
+  %name of the graphic, without the path AND in EPS format:
+  \includegraphics[scale=0.5]{richard_mtg.eps}
+  %caption of the figure 
+  \caption*{\small \em Richard at the Quarterly Meeting in April.}
+  %label of the figure, which has to correspond to \ref{}:
+  \label{fig:richard_mtg}
+\end{figure}
 
-The second disappointment is more serious. During 2013 we did not take
-on any new volunteers to work on the plane. We had several good
-applicants but were unable to fit any of them into the working
-schedule of volunteers at the Canada Aviation \& Space Museum
-(CASM). This has two downsides; the first being that we are now
-becoming short of active volunteers and the second being that we are
-not training any new and sometimes younger volunteers to work on
-pre-jet age aircraft. It is important to pass on the skills of the
-older volunteers to younger members of our Association.
+During the shut down period some limited work has been continuing. Two
+volunteers have been working in the cockpit of the plane and two other
+volunteers have been doing some work on \#3 engine reassembly.
 
-Funding the restoration of the aircraft is always a challenge and is
-becoming more so as the Federal government cuts back on the funds it
-appropriates to the CASM and other similar institutions..
+While the restoration work has been on hold, we have arranged three
+monthly Volunteer Lunches at the Museum to enable the people who
+normally work on the plane to meet and socialize. Although we would
+all like to be working on the plane, we understand why the Museum has
+had to ask us to temporarily suspend our activities. The Volunteer
+Lunches are a way of keeping the team together and up-to-date on what
+is happening. 
 
-You may well ask why I feel optimistic about 2014 after referring to
-disappointments and problems. In the last two months the Directors of
-PNSAC met with the Director General of CASM, Stephen Quick, and
-subsequently a small group of directors met again with him together
-with CASM conservation staff. The outcome of these meetings has been
-an excellent exchange of views, a very firm commitment by the CASM to
-continue to actively support the North Star restoration and a better
-understanding by both sides of the challenges we face and possible
-ways forward.
+At the last meeting of the PNSAC Board of Directors we agreed to
+reschedule the Annual General Meeting from June each year to
+September. It has always been difficult to find a good weekend in June
+to hold the AGM and it is felt that a middle of September date would
+be much better. Our corporate secretary, Roger Button, is aware of
+this proposed change and has confirmed that the existing Board of
+Directors can extend its term until the new AGM date.
 
-As many of you already know, volunteer work on the North Star will be
-suspended for approximately the first three months of 2014. This is to
-enable CASM to undertake a major reorganization of the Museum exhibits
-in preparation for the centenary of the start of the First World
-War. During this time the CASM professional staff will be occupied
-with the reorganization and will not be able to provide the necessary
-supervision of restoration work. During this time, though, we plan to
-update the work plan and overall budget for completing the North Star
-restoration, work on fundraising initiatives and finally update our
-Memorandum of Understanding with CASM.
+Although there has been little restoration work done since December,
+we are working with the Museum to get the project back on track again
+in early June. We are also working to enable us to recruit new
+volunteers to replace the several people who for various reasons have
+had to give up active work.
 
-In addition to our hands-on restoration work, the Association has a
-strong social side. Bill Tate, our Vice President, and his Special
-Events team have organized some memorable bus trips, the last of which
-was to Montreal in October. Bill has now turned his considerable
-organizational skills to further developing our quarterly Members'
-Meetings. In early December we had a great morning at CASM when
-Capt. Bob Pearson of the Gimli Glider fame made a presentation to 150
-of our members and members of other aviation organizations we invited
-to attend. Although our Vice President has retired as an airline
-captain, he certainly has not retired from anything else. Watch your
-emails, Facebook and Twitter for news of events Bill and his team are
-planning for 2014.
+One of the recent discussion areas has been in connection with
+long-term funding of the restoration project. Everybody is aware that
+funding from the Federal Government has been substantially reduced. We
+have accepted that major  expenditures will have to be met from funds
+raised by donations from friends of the Museum and members of our
+Association. This is a significant challenge since everybody receives
+many appeals throughout the year for donations from many different
+deserving organizations. 
+
+During the next few months we hope to develop a revised restoration
+work plan which will enable us to estimate the funds needed to
+complete the project. We will then be able to target appeals for funds
+to carry out specific parts of the restoration in the same way as we
+did for our successful appeal for funds to make troop seats for the
+interior of the plane.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
