--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -29,17 +29,6 @@ Engine 4.
 This downtime also offered the opportunity for the engine crew to
 clean and re-organize the engine shop.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{Eng3Intercooler.eps}
-   %caption of the figure 
-   \caption*{\small \em Garry installing the intercooler on engine 3.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:Eng3Intercooler}
-\end{figure}
-
 \section{Cockpit}
 \label{cockpit}
 
@@ -47,24 +36,60 @@ While restoration work in the shop could not be continued, we
 used the opportunity to install the crew seats and other restored
 items to the cockpit.  The pilot seat was installed (first
 officer seat was installed last year) then the railings and
-safety board were installed behind the seats.  Next we installed
+safety board were installed behind the seats.  
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
+   %caption of the figure 
+   \caption*{\small \em Forward cockpit -- complete.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:fwd_cockpit_complete}
+\end{figure}
+
+Next we installed
 the radio officer and navigator tables, and the seats for these
 positions.  The radio officer seat proved to be a particular
 challenge, as the floor in this area is no longer flat, and some
 modifications to the seat rails were necessary to allow the seat
-to slide.  Finally the flight engineer’s jump seat was attached
+to slide.  Finally the flight engineer's jump seat was attached
 to the railing.  With five crew seats installed, the cockpit is
 very cramped.
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{radio_position.eps}
+   %caption of the figure 
+   \caption*{\small \em Radio Officer's position showing the morse
+     code key.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:radio_position}
+\end{figure}
 
 The cockpit installations were finished off by installing the
 curtains, crew oxygen hoses, and a Morse code key at the radio
 position.
 
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{cockpit_curtain.eps}
+   %caption of the figure 
+   \caption*{\small \em Finishing touches -- the cockpit curtain.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:cockpit_curtain}
+\end{figure}
+
 \section{Crew Lounge, Galley,  and Forward Washroom}
 \label{crewlounge}
 
 The floor under this section was repaired by removing a section
-of badly corroded “I” beam and fabricating a new one from several
+of badly corroded I-beam and fabricating a new one from several
 pieces of aluminum which were riveted in place to support the
 floor.  Once this repair was completed, new cushion flooring was
 cut and glued to the crew lounge and the washroom floor, then
@@ -78,6 +103,17 @@ bed. The installation was finished off by re-installing the door
 between the lounge and the main cabin, so that this fully
 restored area can be protected from dust and debris while the
 main cabin undergoes restoration over the next two years.
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{new_galley_floor.eps}
+   %caption of the figure 
+   \caption*{\small \em New galley and floor.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:new_galley_floor}
+\end{figure}
 
 The completion of the forward area of the aircraft marks a
 significant milestone in the restoration of the North Star.
