--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -57,7 +57,7 @@
 % Editor's notes
 % ..................................................... %
 
-% Report
+% Editor's notes
 \begin{article}
 	\input{article_EditorsNotes} 
 \end{article}
@@ -71,7 +71,7 @@
 	\input{article_PresReport} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Progress report ................................................... %
 
@@ -85,7 +85,7 @@
 % 	\input{article_ProgReport_Sup} 
 % \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Features
 % ........................................................... %
@@ -104,12 +104,12 @@
 	\input{article_Feature2} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Feature article
-%\begin{article}
-%	\input{article_Feature3} 
-%\end{article}
+\begin{article}
+	\input{article_Feature3} 
+\end{article}
 
 %\pagebreak
 
@@ -149,7 +149,7 @@
 % 	\input{article_Special} 
 % \end{article}
 
-\pagebreak
+%\pagebreak
 
 
 % Forthcoming events ................................................. %
@@ -158,7 +158,7 @@
    \input{article_ForthEvents} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 
 % Board members/contact info ......................................... %
